# Fac

./: config_perso
ADA/: ada_iut.htm
Coq/Tp2/: tp2.v
English/: Presentation.odp  liens.txt  script.odt
JFP7/: compile-afficherpos.sh
L2/: Makefile.example
L3/Archi/7TP/TP_07_code/: CMakeLists.txt  README.txt  buildit  test
L3/Archi/7TP/TP_07_code/include/hopp/: algo.hpp  color.hpp  compiler.hpp  container.hpp  conversion.hpp  except.hpp  filesystem.hpp  geometry.hpp  hopp.hpp  int.hpp  literal.hpp  math.hpp  memory.hpp  parser.hpp  print.hpp  random.hpp  stream.hpp  string.hpp  system_of_measurement.hpp  test.hpp  time.hpp  type.hpp
L3/Archi/7TP/TP_07_code/include/hopp/algo/: compare_range.hpp  find_range.hpp  random_element.hpp  replace.hpp  replace_all.hpp  replace_range.hpp  set_difference.hpp  split.hpp  sum.hpp  to_upper.hpp
L3/Archi/7TP/TP_07_code/include/hopp/compiler/: unused.hpp
L3/Archi/7TP/TP_07_code/include/hopp/container/: index.hpp  optional.hpp  tree.hpp  vector2.hpp  vector2D.hpp  vector3.hpp  vector_pair.hpp  vector_view.hpp
L3/Archi/7TP/TP_07_code/include/hopp/conversion/: to_double.hpp  to_int.hpp  to_ldouble.hpp  to_llint.hpp  to_string.hpp  to_type.hpp  to_ullint.hpp
L3/Archi/7TP/TP_07_code/include/hopp/except/: bad_cast.hpp  conversion_error.hpp  file_not_found.hpp  incomplete_implementation.hpp  parse_error.hpp
L3/Archi/7TP/TP_07_code/include/hopp/filesystem/: directory.hpp  directory_separator.hpp  file.hpp  filename.hpp  places.hpp  properties.hpp
L3/Archi/7TP/TP_07_code/include/hopp/geometry/: is_inside.hpp  overlap.hpp  rectangle.hpp
L3/Archi/7TP/TP_07_code/include/hopp/int/: int8.hpp  ldouble.hpp  lint.hpp  llint.hpp  sint.hpp  uint.hpp  uint8.hpp  ulint.hpp  ullint.hpp  usint.hpp
L3/Archi/7TP/TP_07_code/include/hopp/literal/: _s.hpp
L3/Archi/7TP/TP_07_code/include/hopp/math/: integer_factorization.hpp  pi.hpp  primes.hpp
L3/Archi/7TP/TP_07_code/include/hopp/memory/: view_ptr.hpp
L3/Archi/7TP/TP_07_code/include/hopp/parser/: ini.hpp
L3/Archi/7TP/TP_07_code/include/hopp/print/: print.hpp  std.hpp
L3/Archi/7TP/TP_07_code/include/hopp/stream/: get_line.hpp  get_until.hpp  ignore_line.hpp  ignore_whitespaces.hpp  ostreamable.hpp
L3/Archi/7TP/TP_07_code/include/hopp/string/: remove_leading_whitespaces.hpp  remove_multiple_whitespaces.hpp  remove_trailing_whitespaces.hpp
L3/Archi/7TP/TP_07_code/include/hopp/system_of_measurement/: degree.hpp  radian.hpp
L3/Archi/7TP/TP_07_code/include/hopp/time/: duration.hpp  now.hpp  sleep.hpp  time.hpp
L3/Archi/7TP/TP_07_code/include/hopp/type/: is_iterator.hpp  sfinae.hpp
L3/Archi/7TP/TP_07_code/tests/: add_and_remove.cpp  list.cpp  matmul.cpp  matmul_B_ji.cpp  matmul_ikj.cpp  vector.cpp
Project/: Buttons.java  Look.java  Rec.java  look.java  setbutton.java
Vim/: BundleInstall  install_sublime  vimrc
java/: JMine.java
javascript/: test.html
save/: .bashrc  .conkyrc  .vimrc  i8kmon.conf  script  setsleep  syslinux.cfg
xscreensaver/: abstractile  anemone  anemotaxis  antinspect  antmaze  antspotlight  apollonian  apple2  atlantis  attraction  atunnel  barcode  binaryring  blaster  blinkbox  blitspin  blocktube  boing  bouboule  bouncingcow  boxed  boxfit  braid  bsod  bubble3d  bumps  cage  carousel  ccurve  celtic  circuit  cityflow  cloudlife  companioncube  compass  coral  crackberg  crystal  cube21  cubenetic  (+182 more)
(+351 files in other folders)
